k8s/base/microservices-issues/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices-issues-deployment
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issues
      tier: backend
  template:
    metadata:
      labels:
        app: issues
        tier: backend
    spec:
      containers:
        - name: microservices-issues
          image: azizzakiryarov/microservices-issues:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8869
              protocol: TCP
