k8s/base/microservices-issues/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservices-issues
spec:
  type: LoadBalancer
  selector:
    app: issues
  ports:
    - protocol: TCP
      port: 8869
      targetPort: 8869
