k8s/base/microservices-issues/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-issues-ingress
  namespace: microservices
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: local.microservices.issues.se
      http:
        paths:
          - path: /issues/add
            pathType: Prefix
            backend:
              service:
                name: microservices-issues
                port:
                  number: 80
          - path: /issues/update(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-issues
                port:
                  number: 80
          - path: /issues/updatestate(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-issues
                port:
                  number: 80
          - path: /issues/assignissueto(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-issues
                port:
                  number: 80
          - path: /issues/delete(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-issues
                port:
                  number: 80
          - path: /issues/getallissuesfor(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-issues
                port:
                  number: 80
          - path: /issues/getissues
            pathType: Prefix
            backend:
              service:
                name: microservices-issues
                port:
                  number: 80
          - path: /issues/getusedid(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-issues
                port:
                  number: 80
